# solarmax-ha-integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HACS_SETUP.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_question.md
.github/workflows/: format.yml  release.yml  validate.yml
custom_components/solarmax/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  repairs.py  sensor.py  solarmax_api.py  strings.json
custom_components/solarmax/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_repairs.py  test_sensor.py
